--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -20,29 +20,32 @@
 
             <h3>Deliver my taco masterpieces to...</h3>
             <label for="deliveryName">Name:</label>
-            <input type="text" th:field="*{deliveryName}"><br>
+            <input type="text" th:field="*{deliveryName}"/><br>
 
             <label for="deliveryStreet">Street address:</label>
-            <input type="text" th:field="*{deliveryStreet}"><br>
+            <input type="text" th:field="*{deliveryStreet}"/><br>
 
             <label for="deliveryCity">City:</label>
-            <input type="text" th:field="*{deliveryCity}"><br>
+            <input type="text" th:field="*{deliveryCity}"/><br>
             
-            <label for = "deliveryState">State: </label>
-            <input type = "text" th:field = "*{deliveryState}"/><br>
+            <label for="deliveryState">State: </label>
+            <input type="text" th:field="*{deliveryState}"/><br>
 
-            <label for = "deliveryZip">Zip code: </label>
-            <input type = "text" th:field = "*{deliveryZip}"/><br>
+            <label for="deliveryZip">Zip code: </label>
+            <input type="text" th:field="*{deliveryZip}"/><br>
 
             <h3>Here's how I'll pay...</h3>
-            <label for = "ccNumber">Credit Card #: </label>
-            <input type = "text" th:field = "*{ccNumber}"/><br>
+            <label for="ccNumber">Credit Card #: </label>
+            <input type="text" th:field="*{ccNumber}"/>
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('ccNumber')}"
+                  th:errors="*{ccNumber}">CC Num Error</span><br>
 
-            <label for = "ccExpiration">Expiration: </label>
-            <input type = "text" th:field = "*{ccExpiration}"/><br>
+            <label for="ccExpiration">Expiration: </label>
+            <input type="text" th:field="*{ccExpiration}"/><br>
 
-            <label for = "ccCVV">CVV: </label>
-            <input type = "text" th:field = "*{ccCVV}"/><br>
+            <label for="ccCVV">CVV: </label>
+            <input type="text" th:field="*{ccCVV}"/><br>
 
             <input type="submit" value="Submit Order">
         </form>
